--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,5 +33,8 @@ jobs:
         echo "run over....."
         ls
         
-
+    - name: lsa
+      run: |
+        type java
+        java -version
 
