--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,6 +8,9 @@ on:
   schedule:
     - cron: '*/5 * * * *'  #   分 时 日 月 周
   workflow_dispatch:
+  repository_dispatch:
+    types:
+      - webhook-1
 
 jobs:
   build:
