--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,12 +1,12 @@
 name: PythonCI
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
   schedule:
-    - cron: '*/5 * * * *'  #   分 时 日 月 周
+    - cron: '*/10 * * * *'  #   分 时 日 月 周
   workflow_dispatch:
   repository_dispatch:
     types:
