--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,8 +5,8 @@ on:
       branches: [ main ]
     pull_request:
       branches: [ main ]
-#     schedule:
-#       - cron: '* */2 * * *'  #   分 时 日 月 周
+    schedule:
+      - cron: '* */2 * * *'  #   分 时 日 月 周
     repository_dispatch:
       types:
         - webhook-1
